--- a/pyVerein/utils/templates/utils/_select.html
+++ b/pyVerein/utils/templates/utils/_select.html
@@ -1,6 +1,7 @@
 {% load widget_tweaks %}
 
 <div class="mdc-select mdc-input">
+    <i class="mdc-select__dropdown-icon"></i>
     {% render_field field class="mdc-select__native-control" %}
     <label class="mdc-floating-label">{{ label }}</label>
     <div class="mdc-line-ripple"></div>
