--- a/pyVerein/finance/templates/finance/costcenter/detail.html
+++ b/pyVerein/finance/templates/finance/costcenter/detail.html
@@ -113,7 +113,7 @@
             },
         });
         // Search & Year
-        accounting_year_select = '<div class="mdc-select" id="accounting_year_filter"><select id="year_filter" name="year_filter" aria-controls="transactions" class="form-control input-sm mdc-select__native-control"><option value="0" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{% trans 'All' %}</option>{% for year in accounting_years %}<option value="{{ year.accounting_year }}" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{{ year.accounting_year }}</option>{% endfor %}</select><label class="mdc-floating-label mdc-floating-label--float-above">{% trans 'Accounting_year' %}</label><div class="mdc-line-ripple"></div></div>';
+        accounting_year_select = '<div class="mdc-select" id="accounting_year_filter"><i class="mdc-select__dropdown-icon"></i><select id="year_filter" name="year_filter" aria-controls="transactions" class="form-control input-sm mdc-select__native-control"><option value="0" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{% trans 'All' %}</option>{% for year in accounting_years %}<option value="{{ year.accounting_year }}" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{{ year.accounting_year }}</option>{% endfor %}</select><label class="mdc-floating-label mdc-floating-label--float-above">{% trans 'Accounting_year' %}</label><div class="mdc-line-ripple"></div></div>';
         $("#transactions_filter").html(accounting_year_select + '<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
         $("#datatable-search").on('keyup', function(e) {
             dt.search(this.value).draw();
@@ -123,19 +123,12 @@
         });
 
         // Itemsselect
-        $("#transactions_length").html('<div class="mdc-select">' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
+        $("#transactions_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
         $(".mdc-select select").addClass("mdc-select__native-control");
         $('#transactions_length select').on('change', function (e) {
             dt.page.len(this.value).draw();
         });
         
-
-        // Select
-        select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-        // Lineripple
-        lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-        // Textfield
-        textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
     });
 </script>
 {% endblock foot %}
