--- a/pyVerein/finance/templates/finance/debitor/clearing.html
+++ b/pyVerein/finance/templates/finance/debitor/clearing.html
@@ -154,19 +154,12 @@
         })
 
         // Itemsselect
-        $("#transactions_length").html('<div class="mdc-select">' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');        
+        $("#transactions_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');        
         $(".mdc-select select").addClass("mdc-select__native-control");
         $('#transactions_length select').on('change', function (e) {
             dt.page.len(this.value).draw();
         });
         
-
-        // Select
-        select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-        // Lineripple
-        lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-        // Textfield
-        textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
 
         $.ajaxSetup({ 
             beforeSend: function(xhr, settings) {
