--- a/pyVerein/finance/templates/finance/debitor/detail.html
+++ b/pyVerein/finance/templates/finance/debitor/detail.html
@@ -109,7 +109,7 @@
             })
 
             // Itemsselect
-            $("#transactions_length").html('<div class="mdc-select">' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div><div class="mdc-form-field"><div class="mdc-checkbox"><input type="checkbox" id="show_cleared" class="mdc-checkbox__native-control" /><div class="mdc-checkbox__background"><svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24"><path class="mdc-checkbox__checkmark-path" fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg><div class="mdc-checkbox__mixedmark"></div></div></div><label for="show_cleared">{% trans 'Show cleared transactions' %}</label></div>');
+            $("#transactions_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div><div class="mdc-form-field"><div class="mdc-checkbox"><input type="checkbox" id="show_cleared" class="mdc-checkbox__native-control" /><div class="mdc-checkbox__background"><svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24"><path class="mdc-checkbox__checkmark-path" fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg><div class="mdc-checkbox__mixedmark"></div></div></div><label for="show_cleared">{% trans 'Show cleared transactions' %}</label></div>');
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#transactions_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
@@ -126,12 +126,6 @@
                     location.search = ''
                 }
             });
-            // Select
-            select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-            // Lineripple
-            lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-            // Textfield
-            textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
         });
     </script>
 {% endblock foot %}
