--- a/pyVerein/finance/templates/finance/transaction/list.html
+++ b/pyVerein/finance/templates/finance/transaction/list.html
@@ -125,19 +125,11 @@
             })
 
             // Itemsselect
-            $("#transactionlist_length").html('<div class="mdc-select">' + $('#transactionlist_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
+            $("#transactionlist_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#transactionlist_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#transactionlist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            
-
-            // Select
-            select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-            // Lineripple
-            lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-            // Textfield
-            textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
         });
     </script>
 {% endblock %}
