--- a/pyVerein/members/templates/members/division/detail.html
+++ b/pyVerein/members/templates/members/division/detail.html
@@ -94,19 +94,11 @@
             })
 
             // Itemsselect
-            $("#members_length").html('<div class="mdc-select">' + $('#members_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
+            $("#members_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#members_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#members_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            
-
-            // Select
-            select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-            // Lineripple
-            lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-            // Textfield
-            textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
 
             $('tr').on('click', function(){
                 window.open($(this).data('member'));
