--- a/pyVerein/members/templates/members/division/list.html
+++ b/pyVerein/members/templates/members/division/list.html
@@ -91,19 +91,11 @@
             })
 
             // Itemsselect
-            $("#divisionslist_length").html('<div class="mdc-select">' + $('#divisionslist_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
+            $("#divisionslist_length").html('<div class="mdc-select"><i class="mdc-select__dropdown-icon"></i>' + $('#divisionslist_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#divisionslist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            
-
-            // Select
-            select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-            // Lineripple
-            lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
-            // Textfield
-            textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
         })
         ;
     </script>
