--- a/pyVerein/tasks/templates/tasks/list.html
+++ b/pyVerein/tasks/templates/tasks/list.html
@@ -75,6 +75,15 @@
                     <td class="mdl-data-table__cell--non-numeric"><button class="run mdc-button mdc-button--outlined">{% trans 'Run' %}</button></td>
                 </tr>
             {% endif %}
+            {% if perms.tasks.run_delete_terminated_members_task %}
+                <tr id="delete_terminated_members">
+                    <td class="mdl-data-table__cell--non-numeric state"></td>
+                    <td class="mdl-data-table__cell--non-numeric">{% trans 'Delete terminated members' %}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{% trans 'Delete all members which are longer than the set span of days terminated.' %}</td>
+                    <td class="mdl-data-table__cell--non-numeric"></td>
+                    <td class="mdl-data-table__cell--non-numeric"><button class="run mdc-button mdc-button--outlined">{% trans 'Run' %}</button></td>
+                </tr>
+            {% endif %}
         </tbody>
     </table>
 {% endblock %}
@@ -157,6 +166,18 @@
                             break;
                         case "failed":
                             $("#apply-annualclosure .state").html('<i class="fas fa-times-circle"></i><a onclick="annualclosure_info();" data-message="' + data["message"] + '"<i class="fas fa-exclamation-circle"></i></a>');
+                            break;
+                    }
+                    
+                });
+            });
+
+            $("#delete_terminated_members .run").click(function() {
+                $("#delete_terminated_members .state").html('<i class="fas fa-spin fa-sync-alt"></i>');
+                $.post("{% url 'tasks:delete_terminated_members' %}", function(data) {
+                    switch (data["state"].toLowerCase()){
+                        case "success":
+                            $("#delete_terminated_members .state").html('<i class="fas fa-check-circle"></i>');
                             break;
                     }
                     
