Removed active class from logout

--- a/pyVerein/app/templates/app/_drawer.html
+++ b/pyVerein/app/templates/app/_drawer.html
@@ -94,7 +94,7 @@
                 <span class="mdc-list-item__graphic fa fa-user" aria-hidden="true"></span>
                 <span class="mdc-list-item__text">{% trans 'Profile' %}</span>
             </a>
-            <a href="{% url  'logout' %}" title="{% trans 'Sign out' %}" class="mdc-list-item {% base_url_class 'account:detail' 'mdc-list-item--activated'%}">
+            <a href="{% url  'logout' %}" title="{% trans 'Sign out' %}" class="mdc-list-item">
                 <span class="mdc-list-item__graphic fa fa-sign-out-alt" aria-hidden="true"></span>
                 <span class="mdc-list-item__text">{% trans 'Sign out' %}</span>
             </a>      
