--- a/material.io/sass/login.scss
+++ b/material.io/sass/login.scss
@@ -13,6 +13,7 @@
         
             .mdc-text-field{
                 width: 100%;
+                margin-bottom: 10px;
             }
         }
 
