--- a/pyVerein/app/static/app/css/login.css
+++ b/pyVerein/app/static/app/css/login.css
@@ -9,4 +9,5 @@
     width: 20%;
     text-align: center; }
     .login .main .form-block .mdc-text-field {
-      width: 100%; }
+      width: 100%;
+      margin-bottom: 10px; }
