--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -76,7 +76,7 @@
         </section>
         {% include "app/_attributions.html" %}
         <footer id="page-footer">
-            pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="javascript:showAttributions();" class="mdc-theme--on-primary" title="{% trans 'Attributions' %}">{% trans 'Attributions' %}</a>
+            pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="#" id="show-attributions" class="mdc-theme--on-primary" title="{% trans 'Attributions' %}">{% trans 'Attributions' %}</a>
         </footer>
     </div>
 
