Added all library attributions

--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -315,6 +315,12 @@ table .mdc-select{
     margin-bottom: 0px;
 }
 
+#attribution-dialog{
+    h4{
+        margin-bottom: 0px;
+    }
+}
+
 @media(max-width: 600px){
     .form{
         .form-group{
