--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -6,15 +6,92 @@
             <h2 class="mdc-dialog__title">{% trans 'Attributions' %}</h2>
             <section class="mdc-dialog__content">
                 <p>
-                    <h3>
+                    <h4>
+                        Abel font
+                    </h4>
+                    <span class="mdc-typography--overline">Abel</span> {% trans 'by' %} Matthew Desmond<br />
+                    {% trans 'Published under' %} <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL_web" title="Open Font License" target="_blank">Open Font License</a> {% trans 'at' %} <a href="https://fonts.google.com/specimen/Abel" title="{% trans 'Open at' %} fonts.google.com" target="_blank">fonts.google.com</a>
+                </p>
+                <p>
+                    <h4>
+                        animate.css
+                    </h4>
+                    <span class="mdc-typography--overline">animate.css</span> {% trans 'by' %} Daniel Eden<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://daneden.github.io/animate.css/" title="{% trans 'Open at' %} github.io" target="_blank">daneden.github.io</a>
+                </p>
+                <p>
+                    <h4>
+                        Bootstrap Notify
+                    </h4>
+                    <span class="mdc-typography--overline">Bootstrap Notify</span> {% trans 'by' %} Robert McIntosh<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="http://bootstrap-notify.remabledesigns.com/" title="{% trans 'Open at' %} remabledesigns.com" target="_blank">remabledesigns.com</a>
+                </p>
+                <p>
+                    <h4>
+                        c3.js
+                    </h4>
+                    <span class="mdc-typography--overline">c3.js</span> {% trans 'by' %} Masayuki Tanaka<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://c3js.org/" title="{% trans 'Open at' %} c3js.org" target="_blank">c3js.org</a>
+                </p>
+                <p>
+                    <h4>
+                        DataTables.net
+                    </h4>
+                    <span class="mdc-typography--overline">DataTables.net</span> {% trans 'by' %} SpryMedia Ltd.<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://datatables.net/" title="{% trans 'Open at' %} datatables.net" target="_blank">datatables.net</a>
+                </p>
+                <p>
+                    <h4>
+                        decimal.js
+                    </h4>
+                    <span class="mdc-typography--overline">decimal.js</span> {% trans 'by' %} MikeMcl<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="http://mikemcl.github.io/decimal.js/" title="{% trans 'Open at' %} github.io" target="_blank">mikemcl.github.io</a>
+                </p>
+                <p>
+                    <h4>
+                        Font Awesome
+                    </h4>
+                    <span class="mdc-typography--overline">Font Awesome</span> {% trans 'by' %} Fonticons, Inc.<br />
+                    {% trans 'Published under' %} <a href="https://fontawesome.com/license/free" title="Font Awesome Free License" target="_blank">Font Awesome Free License</a> {% trans 'at' %} <a href="https://fontawesome.com/" title="{% trans 'Open at' %} fontawesome.com" target="_blank">fontawesome.com</a>
+                </p>
+                <p>
+                    <h4>
+                        jQuery
+                    </h4>
+                    <span class="mdc-typography--overline">jQuery</span> {% trans 'by' %} The jQuery Foundation<br />
+                    {% trans 'Published under' %} <a href="https://jquery.org/license/" title="jQuery License" target="_blank">jQuery License</a> {% trans 'at' %} <a href="https://jquery.org/" title="{% trans 'Open at' %} jquery.org" target="_blank">jquery.org</a>
+                </p>
+                <p>
+                    <h4>
+                        jquery.inputmask
+                    </h4>
+                    <span class="mdc-typography--overline">jquery.inputmask</span> {% trans 'by' %} Robin Herbots<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://robinherbots.github.io/Inputmask/" title="{% trans 'Open at' %} github.io" target="_blank">github.io</a>
+                </p>
+                <p>
+                    <h4>
+                        Material components
+                    </h4>
+                    <span class="mdc-typography--overline">Material components</span> {% trans 'by' %} Google<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://material.io/develop/web/" title="{% trans 'Open at' %} material.io" target="_blank">material.io</a>
+                </p>
+                <p>
+                    <h4>
+                        Material icons
+                    </h4>
+                    <span class="mdc-typography--overline">Material icons</span> {% trans 'by' %} Google<br />
+                    {% trans 'Published under' %} <a href="http://www.apache.org/licenses/LICENSE-2.0.txt" title="Apache License Version 2.0" target="_blank">Apache License Version 2.0</a> {% trans 'at' %} <a href="https://material.io/tools/icons/" title="{% trans 'Open at' %} material.io" target="_blank">material.io</a>
+                </p>
+                <p>
+                    <h4>
                         Standard Avatar-Image
-                    </h3>
-                    <span class="mdc-typography--overline">Free avatars flat icons</span> by Dmitriy Bondarchuk<br />
-                    Published under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="{% trans 'CC BY-NC-ND 4.0' %}" >CC BY-NC-ND 4.0</a> at <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons" title="{% trans 'Open at behance.net' %}">behance.net</a>
+                    </h4>
+                    <span class="mdc-typography--overline">Free avatars flat icons</span> {% trans 'by' %} Dmitriy Bondarchuk<br />
+                    {% trans 'Published under' %} <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="CC BY-NC-ND 4.0" target="_blank">CC BY-NC-ND 4.0</a> {% trans 'at' %} <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons" title="{% trans 'Open at' %} behance.net" target="_blank">behance.net</a>
                 </p>
             </section>
             <footer class="mdc-dialog__actions">
-                <button type="button" class="mdc-button mdc-dialog__button mdc-button--outlined" title="{% trans 'Close' %}" data-mdc-dialog-action="close">{% trans 'Close' %}</button>
+                <button type="button" class="mdc-button mdc-dialog__button" title="{% trans 'Close' %}" data-mdc-dialog-action="close">{% trans 'Close' %}</button>
             </footer>
         </div>
     </div>
