--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -230,6 +230,9 @@ table .mdc-select {
   margin-top: 0px;
   margin-bottom: 0px; }
 
+#attribution-dialog h4 {
+  margin-bottom: 0px; }
+
 @media (max-width: 600px) {
   .form .form-group {
     flex-wrap: wrap; }
