--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -133,6 +133,9 @@ div.dataTables_wrapper{
             margin-left: 5px;
             margin-right: 0px;
         }
+        .mdc-text-field.mdc-text-field--textarea{
+            margin-top: 20px;
+        }
     }
     .spacer{
         width: 50%;  
