--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -97,6 +97,8 @@ div.dataTables_wrapper div.dataTables_filter {
     width: 50%;
     margin-left: 5px;
     margin-right: 0px; }
+  .form .form-group .mdc-text-field.mdc-text-field--textarea {
+    margin-top: 20px; }
 
 .form .spacer {
   width: 50%;
