--- a/pyVerein/reporting/templates/reporting/form_fields.html
+++ b/pyVerein/reporting/templates/reporting/form_fields.html
@@ -13,6 +13,9 @@
     {% trans 'Description' as description_label%}
     {% include "utils/_textarea.html" with field=form.description label=description_label %}
 </div>
+<div class="form-group full-width">
+    {% include "utils/_checkboxmultipleselect.html" with field=form.model %}
+</div>
 <div class="form-group">
     {% trans 'Reportdefinition' as definition_label%}
     {% render_field form.report  style="display:none" accept=".jrxml"%}
